--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 20
 
       - name: Run monitor
-        run: node src/index.js
+        run: node index.js
 
       - name: Deploy to result
         uses: peaceiris/actions-gh-pages@v4
