--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
+    "jsdom": "^27.3.0",
     "net": "^1.0.2",
+    "node-fetch": "^3.3.2",
     "path": "^0.12.7"
   }
 }
